# consumindo_api_twitter

./: README.md  hello_tweepy.py  main.py  pyproject.toml  secrets_1.py
