[tool.poetry]
name = "consumindo-api-twitter"
version = "1.0.0"
description = "Pacotes para consumo da api do twitter"
authors = ["Thales <thalesshinji.technik@gmail.com>"]
readme = "README.md"
packages = [{include = "consumindo_api_twitter"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
pymongo = "^4.3.3"
tweepy = "^4.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
